--- a/configMap/pod-def-configmap.yaml
+++ b/configMap/pod-def-configmap.yaml
@@ -14,6 +14,6 @@ spec:
         cpu: "500m"
     ports:
       - containerPort: 8080
-    envFrom:
-      - configMapRef:
-          name: app-config
+  - envFrom:
+    - configMapRef:
+        name: app-config
